<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@drawable/grad">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@color/circleBorder">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:padding="3dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/user"
                />

        </RelativeLayout>

        <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgUser"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:text="Abimanyu"
        android:layout_marginTop="15sp"
        android:textSize="32dp"
        android:textColor="@color/white"
        />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="Kediri JATIM "
            android:textAllCaps="true"
            android:layout_marginTop="15sp"
            android:textSize="14dp"
            android:textColor="@color/address"
            />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/liniay1"
        android:layout_width="match_parent"
        android:layout_below="@+id/rellay1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/followerBg"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="43k"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textAllCaps="true"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"
                    />



            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/followingBg"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="157"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow"
                    android:textAllCaps="true"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/liniay1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/headings"
                    android:textSize="13sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/email"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:text="abbymanyu28@gmail.com"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/headings"
                    android:textSize="13sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:text="082140917414"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/headings"
                    android:textSize="13sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/age"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:text="21 Tahun"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/headings"
                    android:textSize="13sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/address"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:text="Kediri"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>